hphp/hack/test/typecheck/splat/type_splat_bad.php.exp
ERROR: File "type_splat_bad.php", line 7, characters 13-20:
A splat parameter `...` may only appear at the end of a parameter list. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 8, characters 3-19:
A splat parameter `...` may only appear at the end of a parameter list. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 15, characters 13-20:
A splat parameter `...` may only appear at the end of a parameter list. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 16, characters 3-19:
A splat parameter `...` may only appear at the end of a parameter list. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 23, characters 13-20:
A splat parameter `...` may only appear at the end of a parameter list. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 24, characters 3-19:
A splat parameter `...` may only appear at the end of a parameter list. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 31, characters 13-18:
A variadic parameter `...` may only appear at the end of a parameter list. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 32, characters 3-14:
A variadic parameter `...` may only appear at the end of a parameter list. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 39, characters 3-33:
A splat parameter `...` must not have a default value. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 46, characters 20-36:
A splat parameter cannot also be optional. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 47, characters 5-30:
A splat parameter cannot also be optional. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 51, characters 20-30:
A splat parameter cannot also be variadic. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 52, characters 5-24:
A splat parameter cannot also be variadic. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 58, characters 18-31:
A splat parameter `...` cannot have a modifier that changes the calling convention, like `inout`. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 59, characters 3-23:
A splat parameter `...` cannot have a modifier that changes the calling convention, like `inout`. (Parsing[1002])
ERROR: File "type_splat_bad.php", line 64, characters 18-34:
Splat parameters cannot be marked readonly (Parsing[1002])
ERROR: File "type_splat_bad.php", line 65, characters 3-26:
Splat parameters cannot be marked readonly (Parsing[1002])
ERROR: File "type_splat_bad.php", line 39, characters 7-11:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_bad.php", line 39, characters 13-19:
  Expected `(mixed...)`
  File "type_splat_bad.php", line 39, characters 7-11:
  But got `Targs super (int, int, mixed...)`
ERROR: File "type_splat_bad.php", line 39, characters 7-11:
Some type arguments violate their constraints (Typing[4323])
  File "type_splat_bad.php", line 39, characters 13-19:
  Expected `(mixed...)`
  File "type_splat_bad.php", line 39, characters 7-11:
  But got `mixed`
  File "type_splat_bad.php", line 39, characters 7-11:
    by the definition of `Targs` arising from an implicit `as mixed` constraint on this type
